--- a/EMQAOA_DARBO_run.ipynb
+++ b/EMQAOA_DARBO_run.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "# This block is the private token (All non-Tencent Quantum Lab users cannot run)\n",
-    "apis.set_token('v0kdNWjG7QoD8c46JIez8U.YgoFgbPLk4xWUW3bbvl2n8R1F62368dx90UvdtWD93tsxGaa0jyelIyP1vlHq53UqIz.knUzBQDIIEIeIfdnbs5.EhefhkK4PCmqkXnx1GyNHmb-04EBlbFIMbeIjJkx3')\n"
+    "apis.set_token('Your_token_provided_by_Tencent_Quantum_Lab')"
    ]
   },
   {
@@ -50,7 +50,7 @@
     "\n",
     "def QAOAloss(graph, w, params,error_mit = True):\n",
     "    nqubit = 20\n",
-    "    nlayers = 3\n",
+    "    nlayers = 2\n",
     "\n",
     "    graph, qlist = devicequbit(graph)\n",
     "\n",
@@ -62,7 +62,7 @@
     "    for i in range(nlayers):    \n",
     "        for e in range(len(graph)):\n",
     "            c.cnot(graph[e][0],graph[e][1])\n",
-    "            c.rz(graph[e][1],theta=params[i,0]*w[e])\n",
+    "            c.rz(graph[e][1],theta=2*params[i,0]*w[e])\n",
     "            c.cnot(graph[e][0],graph[e][1])\n",
     "\n",
     "        for k in qlist:\n",
@@ -76,11 +76,8 @@
     "    c1, info = qiskit_compile(\n",
     "        c,\n",
     "        compiled_options={\n",
-    "            \"basis_gates\": ['h', 'rz', 'x', 'y', 'z', 'cz'],\n",
-    "            \"optimization_level\": 2,\n",
-    "        },\n",
-    "    )\n",
-    "\n",
+    "            \"basis_gates\": ['h', 'rz', 'x', 'y', 'z', 'cx','cz'],\n",
+    "            \"optimization_level\": 2,},)\n",
     "\n",
     "    if error_mit == True:\n",
     "\n",
@@ -96,22 +93,15 @@
     "        noise_scaling_function = partial(\n",
     "            zne.scaling.fold_gates_at_random,\n",
     "            fidelities = {\"single\": 1.0},  \n",
-    "            random_state=random_state, \n",
-    "        )\n",
-    "        factory = zne.inference.PolyFactory(scale_factors=[1, 3,  5],order = 2)\n",
-    "        \n",
+    "            random_state=random_state, )\n",
+    "        factory = zne.inference.PolyFactory (scale_factors=[1, 3,  5],order = 2)\n",
     "\n",
     "        qisc = c1.to_qiskit()\n",
-    "        result = zne.execute_with_zne(\n",
-    "            circuit=qisc, executor = execute, factory=factory, scale_noise = noise_scaling_function,num_to_average = 1\n",
-    "        )\n",
-    "  \n",
+    "        result = zne.execute_with_zne(circuit=qisc, executor = execute, factory=factory, scale_noise = noise_scaling_function)\n",
     "    else:\n",
     "        t = apis.submit_task(circuit=c1,shots=10000,device=d,enable_qos_qubit_mapping=False,enable_qos_gate_decomposition=False)\n",
     "        raw_count = t.results(blocked=True)\n",
     "        result = sum([-counts.expectation(raw_count, z=[graph[e][0], graph[e][1]])*w[e] for e in range(len(graph))])\n",
-    "\n",
-    "\n",
     "    return  result, ideal\n",
     "\n",
     "\n",
